--- a/lecture.ipynb
+++ b/lecture.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMtfXm4PS3+gowdVFQ0Hwsq",
+      "authorship_tag": "ABX9TyOrH02TxdvJbTtUg8Ft5Qam",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/yebyyy/MiliGPT/blob/main/lecture.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/yebyyy/Infinite-Shakepear/blob/main/lecture.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -47,29 +47,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "efywur-CYUjB",
-        "outputId": "77125973-8d72-4178-ebe6-767ef8b98c27"
+        "outputId": "dd417613-6e48-4e14-9c6f-ddaa163afec6"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2024-05-09 22:03:48--  https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\n",
+            "--2024-06-24 20:35:16--  https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.111.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 1115394 (1.1M) [text/plain]\n",
             "Saving to: ‘input.txt’\n",
             "\n",
-            "input.txt           100%[===================>]   1.06M  6.00MB/s    in 0.2s    \n",
+            "input.txt           100%[===================>]   1.06M  --.-KB/s    in 0.04s   \n",
             "\n",
-            "2024-05-09 22:03:49 (6.00 MB/s) - ‘input.txt’ saved [1115394/1115394]\n",
+            "2024-06-24 20:35:16 (25.6 MB/s) - ‘input.txt’ saved [1115394/1115394]\n",
             "\n"
           ]
         }
@@ -87,7 +87,7 @@
       "metadata": {
         "id": "4h-0Mw90YoSo"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -103,9 +103,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bckso5XpYqBy",
-        "outputId": "ce2422d5-b5cc-4084-cf1e-5ac9e0a389b0"
+        "outputId": "0c7bde79-ad19-4469-91ee-82a2ef27b81d"
       },
-      "execution_count": 8,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -145,7 +145,7 @@
       "metadata": {
         "id": "k-x26OPAaH2a"
       },
-      "execution_count": 16,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -160,7 +160,7 @@
       "metadata": {
         "id": "GrovgjZLb-2u"
       },
-      "execution_count": 17,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -175,7 +175,7 @@
       "metadata": {
         "id": "YK_JiJmicV9b"
       },
-      "execution_count": 18,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -188,9 +188,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9FUEsL1ucqwF",
-        "outputId": "88060d6b-f038-401f-bbba-a27a6778e0b6"
+        "outputId": "09df0dde-e516-467a-be13-dd11a5860a3a"
       },
-      "execution_count": 19,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -200,7 +200,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 7
         }
       ]
     },
@@ -212,12 +212,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 34
         },
         "id": "d8FjQIDEdnZG",
-        "outputId": "7abd69cb-7e8f-4924-9e9d-c7334051ec96"
+        "outputId": "f02535ee-1f66-4d9e-c521-a33d66625bdb"
       },
-      "execution_count": 21,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -230,7 +230,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 8
         }
       ]
     },
@@ -251,7 +251,7 @@
       "metadata": {
         "id": "W_GVvcxadzNv"
       },
-      "execution_count": 22,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -262,7 +262,7 @@
       "metadata": {
         "id": "F-ej3p6Od35I"
       },
-      "execution_count": 23,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -275,9 +275,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a4RUzf2PeF9v",
-        "outputId": "de171276-b400-473d-d62b-314e6d860464"
+        "outputId": "fe221d53-1594-48d9-e55b-33bf88483f02"
       },
-      "execution_count": 25,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -287,7 +287,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 11
         }
       ]
     },
@@ -301,9 +301,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MY51UMMHeQYV",
-        "outputId": "ce132c29-8ee1-412e-a6a2-9bc5188a9403"
+        "outputId": "379295aa-ef90-4824-ad5f-ce54cb044f02"
       },
-      "execution_count": 27,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -340,7 +340,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 12
         }
       ]
     },
@@ -363,7 +363,7 @@
       "metadata": {
         "id": "v8FhN3RqeVVC"
       },
-      "execution_count": 28,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -404,9 +404,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nAjMVpbjLADG",
-        "outputId": "5766115b-6335-45eb-b059-cc1e9e2730be"
+        "outputId": "04e36e7e-20f7-41f9-c349-6bc9e85f9cc3"
       },
-      "execution_count": 29,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -416,7 +416,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 14
         }
       ]
     },
@@ -444,9 +444,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "05DKuFBELcDB",
-        "outputId": "8ffb9c0a-6018-4423-a53d-b685de471b91"
+        "outputId": "25d13b3c-6a4a-49b3-84f8-8de1226e21fe"
       },
-      "execution_count": 30,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -546,9 +546,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iJAgkCE5MNt3",
-        "outputId": "b29747df-95ca-4423-c2dc-58cca4b606b0"
+        "outputId": "4d433fc2-4a59-4e65-beeb-26b088410ae1"
       },
-      "execution_count": 31,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -602,6 +602,297 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Simplest Language Model: Bigram"
+      ],
+      "metadata": {
+        "id": "pFzoYzmc1RFt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "from torch.nn import functional as F\n",
+        "torch.manual_seed(1337)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EhZzOMfTCSE4",
+        "outputId": "c1e2a4f2-007e-446c-9fb4-d68e996fe63e"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<torch._C.Generator at 0x78552c33eb50>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class BigramLanguageModel(nn.Module):\n",
+        "  def __init__(self, vocab_size) -> None:\n",
+        "     super().__init__()\n",
+        "     self.token_embedding_table = nn.Embedding(vocab_size, vocab_size)  # for every token, in this case char, will have a row of vocab_size to represent its embedding vector\n",
+        "\n",
+        "  def forward(self, idx, targets=None):\n",
+        "    # Target is none because that when we generate we don't have a target\n",
+        "\n",
+        "    logits = self.token_embedding_table(idx)  # (Batch, Time, Channel) -> (4 * 8 * 65)\n",
+        "\n",
+        "    if targets is None:\n",
+        "      loss = None\n",
+        "    else:\n",
+        "    # loss = F.cross_entropy(logits, targets)\n",
+        "    # This is what we want but we cannot achieve this since pytorch treats the input as (B, C, T) which is not a very good representation of the data\n",
+        "    # Thus reshape\n",
+        "      B, T, C = logits.shape\n",
+        "      logits = logits.view(B*T, C)\n",
+        "      targets = targets.view(B*T)\n",
+        "      loss = F.cross_entropy(logits, targets)\n",
+        "\n",
+        "    return logits, loss\n",
+        "\n",
+        "  def generate(self, idx, max_new_tokens):\n",
+        "    # idx: (B, T) the current context\n",
+        "    for _ in range(max_new_tokens):\n",
+        "      logits, loss = self(idx)\n",
+        "      # only care about the last time step since this is a bigram model\n",
+        "      logits = logits[:, -1, :]  # B, C\n",
+        "      probs = F.softmax(logits, dim=-1)  # B, C\n",
+        "      idx_next = torch.multinomial(probs, num_samples=1)  # B, 1, which means that for every batch get the next token\n",
+        "      # Again, batch means that we have batch_size number of random start points\n",
+        "      idx = torch.cat((idx, idx_next), dim=1)  # B, T+1\n",
+        "    return idx\n",
+        "\n",
+        "\n",
+        "m = BigramLanguageModel(vocab_size)\n",
+        "out, loss = m(xb, yb)\n",
+        "print(out.shape)\n",
+        "print(loss)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IL62cETS1Qx6",
+        "outputId": "398cbe5b-4490-4c1b-891a-b3ef0313f191"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.Size([32, 65])\n",
+            "tensor(4.9095, grad_fn=<NllLossBackward0>)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- -log(1 / 65) = 4.17, so we are actually higher than expected"
+      ],
+      "metadata": {
+        "id": "3n1rHso0F9Li"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Generate from the model"
+      ],
+      "metadata": {
+        "id": "Q7SI1Rr1O2n_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "idx = torch.zeros((1, 1), dtype=torch.long)\n",
+        "print(decode(m.generate(idx, max_new_tokens=100)[0].tolist()))  # [0] because its [[]] shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kChvzFuZO1_P",
+        "outputId": "6327686e-085c-40be-f1cf-c3363e177c93"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "dqyGfQTeF'jYw3VGtdPdrBCmgAMQzWb LBJ?'j\n",
+            "ZWSTZpu,AVh&v.sibIRrkFVsdqKa.xQQM:YmMndqqO$vrHqGdZQTkbXijz-rB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Train the Bigram Model"
+      ],
+      "metadata": {
+        "id": "AAZTd1hxPtVJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Create an AdamW optimizer"
+      ],
+      "metadata": {
+        "id": "SkKrB4MoQG5i"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "optimizer = torch.optim.AdamW(m.parameters(), lr=1e-3)  # Usually 1e-4, but for small network can be larger"
+      ],
+      "metadata": {
+        "id": "omDr1IIjDAy6"
+      },
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Use a bigger Batch Size"
+      ],
+      "metadata": {
+        "id": "BjZ0xbPNQ5MZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "batch_size = 32"
+      ],
+      "metadata": {
+        "id": "4UfCCIGJQmtm"
+      },
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for steps in range(10000):\n",
+        "  # sample a batch of data\n",
+        "  xb, yb = get_batch('train')\n",
+        "\n",
+        "  # evaluate loss\n",
+        "  logits, loss = m(xb, yb)\n",
+        "  optimizer.zero_grad(set_to_none=True)\n",
+        "  loss.backward()\n",
+        "  optimizer.step()\n",
+        "\n",
+        "print(loss.item())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "T-KcN7C3Q7tk",
+        "outputId": "4259bf36-907c-4997-e9e0-e661c51038e5"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2.4520864486694336\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Generate to see how we doin'"
+      ],
+      "metadata": {
+        "id": "OxC-bAwRSVcg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "idx = torch.zeros((1, 1), dtype=torch.long)\n",
+        "print(decode(m.generate(idx, max_new_tokens=300)[0].tolist()))  # [0] because its [[]] shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qgcO21ciRKYE",
+        "outputId": "c88ac427-ee90-459a-cee7-b4f6e59910ab"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Cotry are nend ct yovod t in? w:'s's'scaveer clinouthuchan o?\n",
+            "LO:'s d bhits\n",
+            "Cllld.\n",
+            "\n",
+            "Be romim in?\n",
+            "\n",
+            "The, d orthar t IObl ys,\n",
+            "G y th alim t: wom cuthen t,\n",
+            "\n",
+            "ouby podathapath th He d hilisitoroneld awesw'gon,\n",
+            "Arse:\n",
+            "Whind meshill t at?\n",
+            "Folldo? ld ligad?\n",
+            "WAnentot belo amy;\n",
+            "Forit\n",
+            "MNOf.\n",
+            "\n",
+            "T:\n",
+            "Woffury my.\n",
+            "\n",
+            "d;\n",
+            "H\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "STkC-DkYSYoY"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
