Start version 1 of self attention

--- a/lecture.ipynb
+++ b/lecture.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOrH02TxdvJbTtUg8Ft5Qam",
+      "authorship_tag": "ABX9TyMDaIlP0qwGc9roFJd9sZRp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,29 +47,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "efywur-CYUjB",
-        "outputId": "dd417613-6e48-4e14-9c6f-ddaa163afec6"
+        "outputId": "210b47ae-7420-402d-b1f7-61867727dd53"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2024-06-24 20:35:16--  https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.111.133, 185.199.110.133, ...\n",
+            "--2024-06-25 02:22:43--  https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.111.133, 185.199.108.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 1115394 (1.1M) [text/plain]\n",
             "Saving to: ‘input.txt’\n",
             "\n",
-            "input.txt           100%[===================>]   1.06M  --.-KB/s    in 0.04s   \n",
+            "input.txt           100%[===================>]   1.06M  5.54MB/s    in 0.2s    \n",
             "\n",
-            "2024-06-24 20:35:16 (25.6 MB/s) - ‘input.txt’ saved [1115394/1115394]\n",
+            "2024-06-25 02:22:44 (5.54 MB/s) - ‘input.txt’ saved [1115394/1115394]\n",
             "\n"
           ]
         }
@@ -87,7 +87,7 @@
       "metadata": {
         "id": "4h-0Mw90YoSo"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -103,9 +103,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bckso5XpYqBy",
-        "outputId": "0c7bde79-ad19-4469-91ee-82a2ef27b81d"
+        "outputId": "36f1d777-ce93-4f4f-a926-86d8ac56d369"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -145,7 +145,7 @@
       "metadata": {
         "id": "k-x26OPAaH2a"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -160,7 +160,7 @@
       "metadata": {
         "id": "GrovgjZLb-2u"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -175,7 +175,7 @@
       "metadata": {
         "id": "YK_JiJmicV9b"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -188,9 +188,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9FUEsL1ucqwF",
-        "outputId": "09df0dde-e516-467a-be13-dd11a5860a3a"
+        "outputId": "27b1540b-98c7-44b7-bc85-5cbe0a07c812"
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -200,7 +200,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 8
         }
       ]
     },
@@ -215,9 +215,9 @@
           "height": 34
         },
         "id": "d8FjQIDEdnZG",
-        "outputId": "f02535ee-1f66-4d9e-c521-a33d66625bdb"
+        "outputId": "f77986d6-d812-4c89-b4b8-cff0ba92caaf"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -230,7 +230,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 9
         }
       ]
     },
@@ -251,7 +251,7 @@
       "metadata": {
         "id": "W_GVvcxadzNv"
       },
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -262,7 +262,7 @@
       "metadata": {
         "id": "F-ej3p6Od35I"
       },
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -275,9 +275,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a4RUzf2PeF9v",
-        "outputId": "fe221d53-1594-48d9-e55b-33bf88483f02"
+        "outputId": "229c25a6-4237-413d-9bde-506e90779a87"
       },
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -287,7 +287,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 12
         }
       ]
     },
@@ -301,9 +301,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MY51UMMHeQYV",
-        "outputId": "379295aa-ef90-4824-ad5f-ce54cb044f02"
+        "outputId": "2f6958fc-ee07-4709-ecc9-8e71c08c696b"
       },
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -340,7 +340,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 13
         }
       ]
     },
@@ -363,7 +363,7 @@
       "metadata": {
         "id": "v8FhN3RqeVVC"
       },
-      "execution_count": 13,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -404,9 +404,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nAjMVpbjLADG",
-        "outputId": "04e36e7e-20f7-41f9-c349-6bc9e85f9cc3"
+        "outputId": "1b907c64-5360-46b5-84fe-fd7e48548133"
       },
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -416,7 +416,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 15
         }
       ]
     },
@@ -444,9 +444,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "05DKuFBELcDB",
-        "outputId": "25d13b3c-6a4a-49b3-84f8-8de1226e21fe"
+        "outputId": "399b6563-bce2-4282-8f5e-24b81be0adbb"
       },
-      "execution_count": 15,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -546,9 +546,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iJAgkCE5MNt3",
-        "outputId": "4d433fc2-4a59-4e65-beeb-26b088410ae1"
+        "outputId": "78968dec-e264-4b25-d47a-98b0fbc04a74"
       },
-      "execution_count": 16,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -625,19 +625,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EhZzOMfTCSE4",
-        "outputId": "c1e2a4f2-007e-446c-9fb4-d68e996fe63e"
+        "outputId": "39b38ce0-20e6-4dcf-f147-774e9883ac97"
       },
-      "execution_count": 19,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<torch._C.Generator at 0x78552c33eb50>"
+              "<torch._C.Generator at 0x7ca03b3328f0>"
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 18
         }
       ]
     },
@@ -690,16 +690,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IL62cETS1Qx6",
-        "outputId": "398cbe5b-4490-4c1b-891a-b3ef0313f191"
+        "outputId": "96faa4b1-64b7-4b91-e514-0a1a2bcb801e"
       },
-      "execution_count": 26,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "torch.Size([32, 65])\n",
-            "tensor(4.9095, grad_fn=<NllLossBackward0>)\n"
+            "tensor(4.8786, grad_fn=<NllLossBackward0>)\n"
           ]
         }
       ]
@@ -733,17 +733,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kChvzFuZO1_P",
-        "outputId": "6327686e-085c-40be-f1cf-c3363e177c93"
+        "outputId": "69d88a39-e586-404e-af29-b86602f83f98"
       },
-      "execution_count": 31,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\n",
-            "dqyGfQTeF'jYw3VGtdPdrBCmgAMQzWb LBJ?'j\n",
-            "ZWSTZpu,AVh&v.sibIRrkFVsdqKa.xQQM:YmMndqqO$vrHqGdZQTkbXijz-rB\n"
+            "Sr?qP-QWktXoL&jLDJgOLVz'RIoDqHdhsV&vLLxatjscMpwLERSPyao.qfzs$Ys$zF-w,;eEkzxjgCKFChs!iWW.ObzDnxA Ms$3\n"
           ]
         }
       ]
@@ -774,7 +773,7 @@
       "metadata": {
         "id": "omDr1IIjDAy6"
       },
-      "execution_count": 32,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -794,7 +793,7 @@
       "metadata": {
         "id": "4UfCCIGJQmtm"
       },
-      "execution_count": 33,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -817,15 +816,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "T-KcN7C3Q7tk",
-        "outputId": "4259bf36-907c-4997-e9e0-e661c51038e5"
+        "outputId": "9848ec8f-f879-4e30-b850-08bd17abbb18"
       },
-      "execution_count": 42,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2.4520864486694336\n"
+            "2.5727508068084717\n"
           ]
         }
       ]
@@ -850,48 +849,101 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qgcO21ciRKYE",
-        "outputId": "c88ac427-ee90-459a-cee7-b4f6e59910ab"
+        "outputId": "e753514c-7e9c-42af-cfac-35d47fd67d76"
       },
-      "execution_count": 44,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\n",
-            "Cotry are nend ct yovod t in? w:'s's'scaveer clinouthuchan o?\n",
-            "LO:'s d bhits\n",
-            "Cllld.\n",
-            "\n",
-            "Be romim in?\n",
-            "\n",
-            "The, d orthar t IObl ys,\n",
-            "G y th alim t: wom cuthen t,\n",
-            "\n",
-            "ouby podathapath th He d hilisitoroneld awesw'gon,\n",
-            "Arse:\n",
-            "Whind meshill t at?\n",
-            "Folldo? ld ligad?\n",
-            "WAnentot belo amy;\n",
-            "Forit\n",
-            "MNOf.\n",
-            "\n",
-            "T:\n",
-            "Woffury my.\n",
-            "\n",
-            "d;\n",
-            "H\n"
+            "Iyoteng h hasbe pave pirance\n",
+            "Rie hicomyonthar's\n",
+            "Plinseard ith henoure wounonthioneir thondy, y heltieiengerofo'dsssit ey\n",
+            "KIN d pe wither vouprrouthercc.\n",
+            "hathe; d!\n",
+            "My hind tt hinig t ouchos tes; st yo hind wotte grotonear 'so it t jod weancotha:\n",
+            "h hay.JUCle n prids, r loncave w hollular s O:\n",
+            "HIs; ht \n"
           ]
         }
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#### Self Attention Version 1"
+      ],
+      "metadata": {
+        "id": "ImkIpc1eLmB0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Example:"
+      ],
+      "metadata": {
+        "id": "CDKOXsghMzWC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(1337)\n",
+        "B, T, C = 4, 8, 2 # batch, time, channels\n",
+        "x = torch.randn(B, T, C)\n",
+        "x.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "STkC-DkYSYoY",
+        "outputId": "9f227802-847b-4568-aeae-ada9778cd612"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([4, 8, 2])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "For each token as the target, we cannot let it talk to future tokens, and it can only be paired with the previous tokens. Now, since we are pairing things up, we can average up the previous tokens and pair it with the target token"
+      ],
+      "metadata": {
+        "id": "ogZtYE5FNdUK"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "But this is pretty lossy\n",
+        "- This is not a strong relation\n",
+        "- This also loses information about the position"
+      ],
+      "metadata": {
+        "id": "8FO3_ygIOY9m"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "STkC-DkYSYoY"
+        "id": "MMqzmRuyM72S"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     }
   ]
